Fixed font size and gap

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,7 +14,7 @@ iframe{
         height: 41px;
     }
     .balance {
-        font-size: 14px !important;
+        font-size: 16px !important;
     }
     #open-settings-dialog-button span {
         font-size: 14px;
